crates/ros-z/tests/ui/message_type_info/tuple_struct.rs
use ros_z::MessageTypeInfo;
use serde::{Deserialize, Serialize};

#[derive(Debug, Clone, Serialize, Deserialize, MessageTypeInfo)]
#[ros_msg(type_name = "custom_msgs/msg/TupleStatus")]
struct TupleStatus(f32, f32);

fn main() {}
